[gd_scene load_steps=3 format=3 uid="uid://bgibv2fxc44of"]

[ext_resource type="Script" path="res://Abilities/shadow_orb_logic.gd" id="1_lw07q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jky0k"]
radius = 291.29

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lw07q")

[node name="ShadowOrbTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0

[node name="ShadowAttackTimer" type="Timer" parent="ShadowOrbTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectArea"]
shape = SubResource("CircleShape2D_jky0k")

[connection signal="timeout" from="ShadowOrbTimer" to="." method="_on_shadow_orb_timer_timeout"]
[connection signal="timeout" from="ShadowOrbTimer/ShadowAttackTimer" to="." method="_on_shadow_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectArea" to="." method="_on_enemy_detect_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectArea" to="." method="_on_enemy_detect_area_body_exited"]
